--- a/index.html
+++ b/index.html
@@ -12,31 +12,39 @@
 </head>
 
 
-<body>
- <header class="header">
-  <nav class="header-navigation">
-   <a class="header-logo" href="./index.html">Web<span class="header-logo-italik">Studio</span></a>
-    <ul class="header-menu-list">
-     <li class="header-menu-item"><a class="header-menu-links" href="./index.html">Studio</a></li>
-     <li class="header-menu-item"><a class="header-menu-links" href="">Portfolio</a></li>
-     <li class="header-menu-item"><a class="header-menu-links" href="">Contacts</a></li>
-   </ul>
-  </nav>
-  <address class="header-address">
-    <ul class="header-address-navigation">
-      <li class="header-adress-item"><a class="header-address-links" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li ><a class="header-address-links" href="tel:+110001111111">+11 (000) 11-11-11</a></li>
-    </ul>
-  </address>
-</header>
+<body>   
+   <header class="header">
+    <div class="container"> 
+      <nav class="header-navigation">
+       <a class="header-logo" href="./index.html">Web<span class="header-logo-italik">Studio</span></a>
+        <ul class="header-menu-list">
+         <li class="header-menu-item"><a class="header-menu-links" href="./index.html">Studio</a></li>
+         <li class="header-menu-item"><a class="header-menu-links" href="">Portfolio</a></li>
+         <li class="header-menu-item"><a class="header-menu-links" href="">Contacts</a></li>
+       </ul>
+      </nav>
+      <address class="header-address">
+        <ul class="header-address-navigation">
+          <li class="header-adress-item"><a class="header-address-links" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="header-adress-item"><a class="header-address-links" href="tel:+110001111111">+11 (000) 11-11-11</a></li>
+        </ul>
+      </address>
+  
+    </div>
+  </header>
+  
 
 <main class="main">
   <section class="main-section">
+    <div class="container main-container">
   <h1 class="title-effective-solutions">Effective Solutions for Your Business</h1>
   <button class="order-service" type="button">Order Service</button>
+    </div>
   </section>
 
+  
   <section class="advantages">
+    <div class="container advant">
     <h2 class="advantages-title">our advantages</h2>
     <ul class="advantages-list">
       <li class="advantages-item">
@@ -57,10 +65,13 @@
         <p class="advantages-item-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
       </li>
     </ul>
+    </div>
     </section>
+    
 
     <section class="our-team">
     <h2 class="our-team-title">Our Team</h2>
+    <div class="container our-team-container">
     <ul class="our-team-list">
       <li class="our-team-item">
         <img class="our-team-img" src="./images/photo_goit_1.jpg" alt ="Men with beard" width="264" height="260">
@@ -83,9 +94,11 @@
         <p class="our-team-item-text">UI Designer</p>
       </li>
     </ul>
+      </div>
 </section>
 
 <section id="portfolio" class="portfolio">
+  <div class="container portfolio-container">
   <h2 class="portfolio-title">Our Portfolio</h2>
 <ul class="portfolio-list">
   <li class="portfolio-item">
@@ -119,13 +132,15 @@
     <p class="portfolio-item-text">Marketing</p>
   </li>
 </ul>
+  </div>
 </section>
 
 </main>
-<footer class="page-footer">
+<div class="page-footer">
+  <div class="container footer-container">
   <a class="footer-logo" href="./index.html">web<span class="webstudio">Studio</span></a>
   <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-
+</div>
 </footer>
 
 </body>
