--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
                 width="264"
                 height="260"
               />
-<div class="our-team-info">
-              <h3 class="our-team-item-title">Tom Ford</h3>
-              <p class="our-team-item-text">Frontend Developer</p></div>
+              <div class="our-team-info">
+                <h3 class="our-team-item-title">Tom Ford</h3>
+                <p class="our-team-item-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="our-team-item">
               <img
@@ -140,8 +141,8 @@
                 height="260"
               />
               <div class="our-team-info">
-              <h3 class="our-team-item-title">Camila Garcia</h3>
-              <p class="our-team-item-text">Marketing</p>
+                <h3 class="our-team-item-title">Camila Garcia</h3>
+                <p class="our-team-item-text">Marketing</p>
               </div>
             </li>
             <li class="our-team-item">
@@ -154,7 +155,7 @@
               />
               <div class="our-team-info">
                 <h3 class="our-team-item-title">Daniel Wilson</h3>
-              <p class="our-team-item-text">UI Designer</p>
+                <p class="our-team-item-text">UI Designer</p>
               </div>
             </li>
           </ul>
@@ -173,8 +174,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-title">Banking App</h3>
-              <p class="portfolio-item-text">App</p>
+              <div class="container portfolio-info">
+                <h3 class="portfolio-item-title">Banking App</h3>
+                <p class="portfolio-item-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -184,8 +187,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-title">Cashless Payment</h3>
-              <p class="portfolio-item-text">Marketing</p>
+              <div class="container portfolio-info">
+                <h3 class="portfolio-item-title">Cashless Payment</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -195,8 +200,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-title">Meditation App</h3>
-              <p class="portfolio-item-text">App</p>
+              <div class="container portfolio-info">
+                <h3 class="portfolio-item-title">Meditation App</h3>
+                <p class="portfolio-item-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -206,8 +213,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-title">Taxi Service</h3>
-              <p class="portfolio-item-text">Marketing</p>
+              <div class="container portfolio-info">
+                <h3 class="portfolio-item-title">Taxi Service</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -217,8 +226,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-title">Screen Illustrations</h3>
-              <p class="portfolio-item-text">Design</p>
+              <div class="container portfolio-info">
+                <h3 class="portfolio-item-title">Screen Illustrations</h3>
+                <p class="portfolio-item-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -228,8 +239,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-title">Online Courses</h3>
-              <p class="portfolio-item-text">Marketing</p>
+              <div class="container portfolio-info">
+                <h3 class="portfolio-item-title">Online Courses</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
