--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </head>
 
   <body>
-    <header class="header container">
-      <div class="container header-navigation">
+    <header class="header">
+      <div class="container">
         <nav class="header-navigation">
           <a class="header-logo" href="./index.html"
             >Web<span class="header-logo-italik">Studio</span></a
