--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 width="360"
                 height="300"
               />
-              <div class="container portfolio-info">
+              <div class="portfolio-info">
                 <h3 class="portfolio-item-title">Banking App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
@@ -187,7 +187,7 @@
                 width="360"
                 height="300"
               />
-              <div class="container portfolio-info">
+              <div class="portfolio-info">
                 <h3 class="portfolio-item-title">Cashless Payment</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
@@ -200,7 +200,7 @@
                 width="360"
                 height="300"
               />
-              <div class="container portfolio-info">
+              <div class="portfolio-info">
                 <h3 class="portfolio-item-title">Meditation App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
@@ -213,7 +213,7 @@
                 width="360"
                 height="300"
               />
-              <div class="container portfolio-info">
+              <div class="portfolio-info">
                 <h3 class="portfolio-item-title">Taxi Service</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
@@ -226,7 +226,7 @@
                 width="360"
                 height="300"
               />
-              <div class="container portfolio-info">
+              <div class="portfolio-info">
                 <h3 class="portfolio-item-title">Screen Illustrations</h3>
                 <p class="portfolio-item-text">Design</p>
               </div>
@@ -239,7 +239,7 @@
                 width="360"
                 height="300"
               />
-              <div class="container portfolio-info">
+              <div class="portfolio-info">
                 <h3 class="portfolio-item-title">Online Courses</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
